Bug 294934. Absolute positioning should be relative to the padding edge, so we need to set the absolute containing block size to the size of the padding-box of any wrapper frame. r+sr=dbaron,a=bsmedberg